# python-gls

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: tutorial.ipynb
examples/: basic_usage.py  compare_with_r.py
python_gls/: __init__.py  _parametrization.py  likelihood.py  model.py  results.py
python_gls/correlation/: __init__.py  ar1.py  arma.py  base.py  car1.py  comp_symm.py  spatial.py  symm.py
python_gls/variance/: __init__.py  base.py  comb.py  const_power.py  exp.py  fixed.py  ident.py  power.py
tests/: conftest.py  generate_r_reference.R  test_against_r.py  test_against_r_nlme.py  test_correlation.py  test_model.py  test_stress.py  test_variance.py
tests/fixtures/: r_reference.json
