[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-gls"
version = "0.1.0"
description = "GLS estimator with learned correlation and variance structures (Python equivalent of R's nlme::gls)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Bruno Abrahao"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "formulaic>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
include = ["python_gls*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (e.g., Monte Carlo simulations)",
]
